more icon converted to new cdn

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <i class="twa twa-laptop-computer font-bold mr-4"></i>
         </div>
         <div class="flex-1">
-          <a href="https://github.com/JoKeRxTD/voltic.thedev.id" target="_blank" class="openSource" style="align-items: center;" >This website is open source.</a> <i class="fab fa-github github"></i>
+          <a href="https://github.com/JoKeRxTD/voltic.thedev.id" target="_blank" class="openSource" style="align-items: center;" >This website is open source.</a> <i class="bi bi-github github"></i>
         </div>
       </div>
     </div>
@@ -53,9 +53,9 @@
       </a>
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
         <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #8e9629;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>
-        <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="fab fa-github"></i>&nbsp;Github</a></li>
+        <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="bi bi-github"></i>&nbsp;Github</a></li>
         <li><a href="./projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>
-        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>
+        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
         <li><a href="./store.html" class="nav-link px-2 secondary"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a></li>
       </ul>
     </div>
@@ -64,7 +64,7 @@
     <center><img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
             <h2 style="text-decoration: none; color: #7289DA; font-size: 2rem;  color: #97A9B4;text-align: center;">Voltic Development</h2><br>
         <p class="headerTitle" style="font-size: 1rem;"> 
-            Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
+            Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a>
         </p>
     <br>
       <!-- Recruiting Box -->
@@ -85,114 +85,52 @@
           <!--! JoKeR#0001 -->
           <div class="card text-white bg-dark" >
              <div class="card-header" style="background-color: #1a2535;">
-                <i style="color: #7289DA;"  class="fab fa-discord"></i> JoKeR#0001</div>
+                <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;oKeR#0001</div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="staffImg" src="./assets/img/staff/joker.gif" > </img></center><br> -->
                 <center><img class="staffImg" id="joker_avatar" src="https://cdn.discordapp.com/avatars/116730818822537225/a_8e5fad610c822f5ecb4721066bb9ab97.gif"></img></center><br><br><br>
                 <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >CEO / Lead Developer</a> </h5>
                 <p class="card-text" href="https://discord.com/users/116730818822537225" style="color: #fafafa;">I am always looking to learn new things! It is all about the&nbsp;<a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Experience</a></p><br>
                 <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
-                <a href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
-                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
-                <a href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;</a>
+                <a href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
+                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+                <a href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="bi bi-twitter"></i>&nbsp;</a>
                 <a href="https://api.mythbot.org" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a><br>
               </div>
             </div>
           <!--! Vacant -->
           <div class="card text-white bg-dark" >
              <div class="card-header" style="background-color: #1a2535;">
-                <i style="color: #7289DA;"  class="fab fa-discord"></i>Vacant</div>
+                <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Vacant</div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
                 <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Sr.Developer</a></h5>
                 <center><p class="card-text" href="/" style="padding-bottom: 1rem;">&nbsp;We are looking for Staff, Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information</p></center><br>
                 <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="bi bi-twitter"></i>&nbsp;</a>
                 <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a>
               </div>
             </div>
             <!--! Vacant -->
           <div class="card text-white bg-dark">
              <div class="card-header" style="background-color: #1a2535;">
-                <i style="color: #7289DA;"  class="fab fa-discord"></i> Vacant
+                <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Vacant
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
                 <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Sr.Administrator</a></h5>
                 <center><p class="card-text" href="/" style="padding-bottom: 1rem;">&nbsp;We are looking for Staff, Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information</p></center><br>
                 <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;</a>
-                <!-- <a href="/" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;</a> -->
+                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="bi bi-twitter"></i>&nbsp;</a>
                 <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a>
               </div>
             </div>
         </div>
   </div><br><br><br><br><br><br>
-  <!-- <div class="header" style="text-align: center;">
-    <h4>Contact Us</h4>
-  </div>
-  <div class="contactUs"> 
-    <form class="row g-2 needs-validation" novalidate>
-      <div class="col-md-5">
-        <label for="validationCustom01" class="form-label">First name</label>
-        <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-      </div>
-      <div class="col-md-4">
-        <label for="validationCustomUsername" class="form-label">Username</label>
-        <div class="input-group has-validation">
-          <span class="input-group-text" id="inputGroupPrepend">#</span>
-          <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-          <div class="invalid-feedback">
-            Please enter a valid discord name
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <label for="validationCustom03" class="form-label">City</label>
-        <input type="text" class="form-control" id="validationCustom03" required>
-        <div class="invalid-feedback">
-          Please provide a valid city.
-        </div>
-      </div>
-      <div class="col-md-3">
-        <label for="validationCustom04" class="form-label">State</label>
-        <select class="form-select" id="validationCustom04" required>
-          <option selected disabled value="">Choose...</option>
-          <option>...</option>
-        </select>
-        <div class="invalid-feedback">
-          Please select a valid state.
-        </div>
-      </div>
-      <div class="col-md-3">
-        <label for="validationCustom05" class="form-label">Zip</label>
-        <input type="text" class="form-control" id="validationCustom05" required>
-        <div class="invalid-feedback">
-          Please provide a valid zip.
-        </div>
-      </div>
-      <div class="col-12">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-          <label class="form-check-label" for="invalidCheck">
-            Agree to terms and conditions
-          </label>
-          <div class="invalid-feedback">
-            You must agree before submitting.
-          </div>
-        </div>
-      </div>
-      <div class="col-12">
-        <button class="btn btn-primary" type="submit">Submit form</button>
-      </div>
-    </form> -->
   </div>
   <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d; padding-top: .5rem;align-items: center; " >
     <div class="col-md-4 d-flex align-items-center">
@@ -202,9 +140,9 @@
       <span class="text-muted" style="color: #97A9B4;">© 2017 Voltic Development, Inc</span>
     </div>
     <ul class="col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://discord.gg/Q6ZSW63Fpw"><i class="fab fa-discord"></i></a></li>
-      <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://twitter.com/JoKeRxHD"><i class="fab fa-twitter"></i></a></li>
-      <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://github.com/JoKeRxTD"><i class="fab fa-github"></i></a></li>
+      <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://discord.gg/Q6ZSW63Fpw"><i class="bi bi-discord"></i></a></li>
+      <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://twitter.com/JoKeRxHD"><i class="bi bi-twitter"></i></a></li>
+      <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://github.com/JoKeRxTD"><i class="bi bi-github"></i></a></li>
       <svg class="bi" width="30" height="24"><use xlink:href="/"></use></svg>
     </ul>
   </div>
