more icon converted

--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
           <i class="twa twa-laptop-computer font-bold mr-4"></i>
         </div>
         <div class="flex-1">
-          <a href="https://github.com/JoKeRxTD/voltic.thedev.id" target="_blank" class="openSource" style="align-items: center;" >This website is open source.</a> <i class="fab fa-github github"></i>
+          <a href="https://github.com/JoKeRxTD/voltic.thedev.id" target="_blank" class="openSource" style="align-items: center;" >This website is open source.</a> <i class="bi bi-github github"></i>
         </div>
       </div>
     </div>
@@ -51,9 +51,9 @@
       </a>
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
         <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #8e9629;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>
-        <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="fab fa-github"></i>&nbsp;Github</a></li>
+        <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="bi bi-github"></i>&nbsp;Github</a></li>
         <li><a href="./projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>
-        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>
+        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
         <li><a href="./store.html" class="nav-link px-2 secondary"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a></li>
       </ul>
     </div>
@@ -89,8 +89,8 @@
                 <center><img class="staffImg" draggable="false" src="../assets/img/projects/mbr-logo.png" > </img></center><br>
                 <center><p class="card-text" >&nbsp;<span>Join 1.5m Users, User 💎MythBot Radio™, With over 30+ Radio Stations From All Over The World</span></p></center><br>
                 <a href="https://www.mythbot.org" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-                <a href="https://www.mythbot.org/mbr" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;</a>
-                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
+                <a href="https://www.mythbot.org/mbr" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
+                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
               </div>
             </div>
 
@@ -103,8 +103,8 @@
                 <center><img class="staffImg" draggable="false" src="../assets/img/projects/dscbots2.gif" style="border-radius: 50%;"> </img></center><br>
                 <center><p class="card-text">&nbsp;<span>join or Grow your community with DscBots, From Discord bots to Discord servers and more!</span></p></center><br>
                 <a href="https://www.dscbots.xyz" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-                <a href="https://dscbots.xyz/bot-rules" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;</a>
-                <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
+                <a href="https://dscbots.xyz/bot-rules" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
+                <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
               </div>
             </div>
             <div class="card text-white bg-dark" ">
@@ -114,9 +114,9 @@
                  <div class="card-body" style="background-color: #0e141d;"><br>
                  <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img></center><br>
                  <center><p class="card-text" >&nbsp;Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
-                 <a href="https://www.dscbots.xyz" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-                 <a href="https://dscbots.xyz/bot-rules" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;</a>
-                 <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
+                 <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
+                 <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
+                 <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
                </div>
              </div>
         </div>
@@ -131,9 +131,9 @@
     </div>
 
     <ul class="col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://discord.gg/Q6ZSW63Fpw"><i class="fab fa-discord"></i></a></li>
+      <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://discord.gg/Q6ZSW63Fpw"><i class="bi bi-discord"></i></a></li>
       <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://twitter.com/JoKeRxHD"><i class="fab fa-twitter"></i></a></li>
-      <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://github.com/JoKeRxTD"><i class="fab fa-github"></i></a></li>
+      <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://github.com/JoKeRxTD"><i class="bi bi-github"></i></a></li>
       <svg class="bi" width="30" height="24"><use xlink:href="/"></use></svg>
     </ul>
     
