oops typeo fixed

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <!--! JoKeR#0001 -->
           <div class="card text-white bg-dark" >
              <div class="card-header" style="background-color: #1a2535;">
-                <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;oKeR#0001</div>
+                <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;JoKeR#0001</div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="staffImg" src="./assets/img/staff/joker.gif" > </img></center><br> -->
                 <center><img class="staffImg" id="joker_avatar" src="https://cdn.discordapp.com/avatars/116730818822537225/a_8e5fad610c822f5ecb4721066bb9ab97.gif"></img></center><br><br><br>
