--- a/store.html
+++ b/store.html
@@ -75,6 +75,7 @@
           </div>
         </div>
       </div>
+      <!-- TODO Website Packages -->
         <div class="header">
           <h4>Website Packages</h4>
         </div>
@@ -130,6 +131,8 @@
               </span>
              </div>
         </div>
+
+        <!-- TODO Web-Hosting Package -->
         <div class="header">
           <h4>Web-Hosting Packages</h4>
         </div>
