--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,7 @@
         <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="bi bi-github"></i>&nbsp;Github</a></li>
         <li><a href="./projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>
         <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
+        <li><a href="./tools.html" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="bi bi-tools"></i>&nbsp;Tools</a></li>
         <li><a href="./store.html" class="nav-link px-2 secondary"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a></li>
       </ul>
     </div>
