--- a/store.html
+++ b/store.html
@@ -51,9 +51,10 @@
       </a>
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
         <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #8e9629;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>
-        <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="fab fa-github"></i>&nbsp;Github</a></li>
+        <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="bi bi-github"></i>&nbsp;Github</a></li>
         <li><a href="./projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>
-        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>
+        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
+        <li><a href="./tools.html" class="nav-link px-2 secondary"><i style="color: #7289DA;"  class="bi bi-tools"></i>&nbsp;Tools</a></li>
         <li><a href="./store.html" class="nav-link px-2 secondary"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a></li>
       </ul>
     </div>
