updated tools & resources page, more to be added

--- a/tools.html
+++ b/tools.html
@@ -61,7 +61,7 @@
     </div>
   <div class="container">
     <center><img class="logoImg" src="../assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
-            <h2 class="headerTitle"><i class="bi bi-tools" style="color: #1c7723;"></i>&nbsp;Tools</h2><br>
+            <h2 class="headerTitle"><i class="bi bi-tools" style="color: #1c7723;"></i>&nbsp;Tools & Resources</h2><br>
         <p class="headerTitle" style="font-size: 1rem;"> 
           Tools, Here you will find useful resources and tools that you can use to help you with your projects.
         </p><br>
@@ -78,57 +78,64 @@
       </div>
       <div class="header">
         <h4>Tools</h4>
-      </div>
+      </div><br>
       <!-- TODO Website Packages -->
       <div class="ourTools">
         <!--! JoKeR#0001 -->
-        <div class="card text-white bg-dark" >
-           <div class="card-header" style="background-color: #1a2535;">
-              <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;JoKeR#0001</div>
-              <div class="card-body" style="background-color: #0e141d;"><br>
-              <!-- <center><img class="staffImg" src="./assets/img/staff/joker.gif" > </img></center><br> -->
-              <center><img class="staffImg" id="joker_avatar" src="https://cdn.discordapp.com/avatars/116730818822537225/a_8e5fad610c822f5ecb4721066bb9ab97.gif"></img></center><br><br><br>
-              <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >CEO / Lead Developer</a> </h5>
-              <p class="card-text" href="https://discord.com/users/116730818822537225" style="color: #fafafa;">I am always looking to learn new things! It is all about the&nbsp;<a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Experience</a></p><br>
-              <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
-              <a href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
-              <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
-              <a href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="bi bi-twitter"></i>&nbsp;</a>
-              <a href="https://api.mythbot.org" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a><br>
-            </div>
+        <div class="card1 row g-0 position-relative" >
+          <div class="col-md-6 mb-md-0 p-md-4">
+            <img src="./assets/img/tools/discord.png" class="w-100" alt="...">
           </div>
+          <div class="col-md-6 p-4 ps-md-0 text-light mt-3">
+            <h5 class="mt-5">Discord Bot Invite Generator</h5>
+            <p>A small calculator that generates Discord OAuth invite links. 
+              <br><code>This website is not affiliated with Discord</code></p>
+            Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
+            <a href="https://discordapi.com/permissions.html" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+          </div>
+        </div><br>
         <!--! Vacant -->
-        <div class="card text-white bg-dark" >
-           <div class="card-header" style="background-color: #1a2535;">
-              <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Vacant</div>
-              <div class="card-body" style="background-color: #0e141d;"><br>
-              <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
-              <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Sr.Developer</a></h5>
-              <center><p class="card-text" href="/" style="padding-bottom: 1rem;">&nbsp;We are looking for Staff, Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information</p></center><br>
-              <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
-              <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
-              <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
-              <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="bi bi-twitter"></i>&nbsp;</a>
-              <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a>
-            </div>
+        <!-- <div class="row g-0 bg-dark position-relative">
+          <div class="col-md-6 mb-md-0 p-md-4">
+            <img src="./assets/img/projects/dscbots.png" class="w-25" alt="...">
           </div>
+          <div class="col-md-6 p-4 ps-md-0 text-light">
+            <h5 class="mt-0">Coming Soon</h5>
+            <p>Another instance of placeholder content for this other custom component. It is intended to mimic what some real-world content would look like, and we're using it here to give the component a bit of body and size.</p>
+            Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
+            <a href="#" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+          </div>
+        </div><br> -->
           <!--! Vacant -->
-        <div class="card text-white bg-dark">
-           <div class="card-header" style="background-color: #1a2535;">
-              <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Vacant
-              </div>
-              <div class="card-body" style="background-color: #0e141d;"><br>
-              <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
-              <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Sr.Administrator</a></h5>
-              <center><p class="card-text" href="/" style="padding-bottom: 1rem;">&nbsp;We are looking for Staff, Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information</p></center><br>
-              <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
-              <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
-              <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
-              <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="bi bi-twitter"></i>&nbsp;</a>
-              <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a>
+          <!-- <div class="row g-0 bg-dark position-relative">
+            <div class="col-md-6 mb-md-0 p-md-4">
+              <img src="./assets/img/projects/dscbots.png" class="w-25" alt="...">
             </div>
-          </div>
+            <div class="col-md-6 p-4 ps-md-0 text-light">
+              <h5 class="mt-0">Coming Soon</h5>
+              <p>Another instance of placeholder content for this other custom component. It is intended to mimic what some real-world content would look like, and we're using it here to give the component a bit of body and size.</p>
+              Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
+              <a href="#" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+            </div>
+          </div> -->
+          <br>
       </div>
+      <div class="header">
+        <h4>Resources</h4>
+      </div><br>
+      <!--! Vacant -->
+      <div class="card1 row g-0 position-relative" >
+        <div class="col-md-6 mb-md-0 p-md-4">
+          <img src="./assets/img/tools/discord_branding.png" class="w-100" alt="...">
+        </div>
+        <div class="col-md-6 p-4 ps-md-0 text-light mt-3">
+          <h5 class="mt-5">Discord Branding</h5>
+          <p>Discord Logo Workmark White · Discord Logo Workmark Black · Discord Logo Workmark Color. 
+            <br><code>This website is affiliated with Discord</code></p>
+          Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
+          <a href="https://discord.com/branding" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+        </div>
+      </div><br>
 </div>
         <br><br><br><br><br><br>
   </div>
