more tools page updates

--- a/tools.html
+++ b/tools.html
@@ -81,51 +81,41 @@
       </div><br>
       <!-- TODO Website Packages -->
       <div class="ourTools">
-        <!--! JoKeR#0001 -->
+        <!--! Discord Bot Invite Generator -->
         <div class="card1 row g-0 position-relative" >
-          <div class="col-md-6 mb-md-0 p-md-4">
+          <div class="col-md-6 mb-md-0 p-md-5">
             <img src="./assets/img/tools/discord.png" class="w-100" alt="...">
           </div>
           <div class="col-md-6 p-4 ps-md-0 text-light mt-3">
             <h5 class="mt-5">Discord Bot Invite Generator</h5>
-            <p>A small calculator that generates Discord OAuth invite links. 
+            <p>If you get an error message saying "Bot requires a code grant", head over to your application's settings and disable the "Require OAuth2 Code Grant" option. You shouldn't enable this option unless you know why you need to. 
               <br><code>This website is not affiliated with Discord</code></p>
             Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-            <a href="https://discordapi.com/permissions.html" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+            <a href="https://discordapi.com/permissions.html" class="btn btn-outline-dark " style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
           </div>
         </div><br>
-        <!--! Vacant -->
-        <!-- <div class="row g-0 bg-dark position-relative">
-          <div class="col-md-6 mb-md-0 p-md-4">
-            <img src="./assets/img/projects/dscbots.png" class="w-25" alt="...">
+        <!--! Zap Hosting -->
+        <div class="card1 row g-0 position-relative" >
+          <div class="col-md-6 p-4 ps-md-3 text-light mt-2">
+            <h5 class="mt-5">Zap-Hosting</h5>
+            <p>ZAP-Hosting is a hosting company founded in 2010. We have all kinds of products to get you on the web. From VPS over gameservers to domains. Our support is available for you all year round via ticket, e-mail and live chat. 
+              Use code: <code>eqsource-10</code> for 20% off
+              <br><code>Zap-Hosting is trusted by 100,000's of customers</code></p>
+            Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
+            <a href="https://zap-hosting.com/vdevs" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
           </div>
-          <div class="col-md-6 p-4 ps-md-0 text-light">
-            <h5 class="mt-0">Coming Soon</h5>
-            <p>Another instance of placeholder content for this other custom component. It is intended to mimic what some real-world content would look like, and we're using it here to give the component a bit of body and size.</p>
-            Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-            <a href="#" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+          <div class="col-md-6 mb-md-0 p-md-5">
+            <img src="./assets/img/tools/zap_big.png" class="w-100" alt="...">
           </div>
-        </div><br> -->
-          <!--! Vacant -->
-          <!-- <div class="row g-0 bg-dark position-relative">
-            <div class="col-md-6 mb-md-0 p-md-4">
-              <img src="./assets/img/projects/dscbots.png" class="w-25" alt="...">
-            </div>
-            <div class="col-md-6 p-4 ps-md-0 text-light">
-              <h5 class="mt-0">Coming Soon</h5>
-              <p>Another instance of placeholder content for this other custom component. It is intended to mimic what some real-world content would look like, and we're using it here to give the component a bit of body and size.</p>
-              Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-              <a href="#" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
-            </div>
-          </div> -->
+        </div>
           <br>
       </div>
       <div class="header">
         <h4>Resources</h4>
       </div><br>
-      <!--! Vacant -->
+      <!--! Discord Branding -->
       <div class="card1 row g-0 position-relative" >
-        <div class="col-md-6 mb-md-0 p-md-4">
+        <div class="col-md-6 mb-md-0 p-md-5">
           <img src="./assets/img/tools/discord_branding.png" class="w-100" alt="...">
         </div>
         <div class="col-md-6 p-4 ps-md-0 text-light mt-3">
